2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-xesam-manager.c:
	* src/libtracker-db/tracker-db-manager.c:
	* data/sqlite-stored-procs.sql:

	Fix for a warning about table Events not existing

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-main.c:
	* src/libtracker-db/tracker-db-manager.c:
	* src/libtracker-db/tracker-db-manager.h:

	tracker_db_manager_shutdown must not remove the directory in tmp with
	cache.db in case the indexer calls it.

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	src/tracker-indexer/tracker-indexer.c: The table Events for
	tracker_db_create_event only exists in cache.db, not in common.db,
	therefore patched it to use a priv->cache instead of priv->common

2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Normalizing attachments (for
	example cache.db was attached twice, which gave warnings).

2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Fix for "database cache is
	already in use" warning (removing a hack that is no longer needed,
	this hack was put in place because before fixes that were done today
	was tracker-indexer removing cache.db after some time. The hack caused
	an unwanted warning, though)

2008-06-23  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-interface-sqlite.c: Improve error
	reporting here so we say if the query used is foobar OR if it is a
	geniune error.
	
	* src/libtracker-db/tracker-db-manager.c: Strip whitespace before
	trying to load queries from SQL files. Also, present a count when
	done so we know how many we loaded as a measure of testing it
	worked properly.

2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Also setting DB parameters
	in case of attach_all=true. Fixes load_sql_file for sqlite-services.sql